<resources>
    <string name="app_name">DiceGame</string>
    <string name="game_map_list_title">Map List</string>
    <string name="players_list_title">Stored players</string>
    <string name="game_list_title">Games</string>
    <string name="game_instance_list_title">Game Instances</string>
    <string name="progress_title">Please wait</string>
    <string name="progress_text">Loading data...</string>
    <string name="login_progress_text">Login in progress...</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_register">Register new user</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_key_web_service_url">baseUrl</string>
    <string name="pref_title_web_service_url">Web Service home url</string>
    <string name="pref_default_web_service_url">http://10.0.2.2:8080/engine</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_other">Other</string>
    <string name="pref_title_admin_portal">Admin portal</string>
    <string name="pref_key_admin_portal">adminPortalUrl</string>

    <string name="pref_title_stay_logged">Stay logged in</string>
    <string name="pref_key_stay_logged">stayLoggedIn</string>

    <string name="pref_title_2d_mode">2D Mode</string>
    <string name="pref_key_2d_mode">in2DMode</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="title_activity_base_activity_with_menu">Cube Game</string>
    <string name="error_title">Error</string>
    <string name="login_error_title">Login Error</string>
    <string name="pos_btn_caption">OK</string>
    <string name="yes_btn_caption">Yes</string>
    <string name="no_btn_caption">No</string>
    <string name="cancel_btn_caption">Cancel</string>
    <string name="add_new_map_caption">Add new Map</string>
    <string name="add_new_player_caption">Add new Player</string>
    <string name="edit_map_caption">Edit map details</string>
    <string name="confirm_title">Confirmation</string>
    <string name="save_confirm_text">Do you want to save changes?</string>
    <string name="input_name_caption">Input Name</string>
    <string name="blank_name_error">Entity name can not be blank</string>
    <string name="start_new_instance_title">Start New Instance</string>
    <string name="players_list_empty_error">List of players can not be empty.</string>
    <string name="player_exists_error">Player already exists.</string>
    <string name="new_game_point_caption">New point</string>
    <string name="new_gamepoint_dialog_title">New Game point</string>

    <string name="title_activity_main">MainActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="pref_title_graphics_quality">Graphics quality</string>
    <string name="pref_key_graphics_quality">graphicsQualityLevel</string>

</resources>
