<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <EditTextPreference
        android:defaultValue="@string/pref_default_web_service_url"
        android:key="@string/pref_key_web_service_url"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_title_web_service_url" />

    <SwitchPreference
        android:defaultValue="true"
        android:key="@string/pref_key_stay_logged"
        android:title="@string/pref_title_stay_logged" />

    <SwitchPreference
        android:defaultValue="false"
        android:key="@string/pref_key_2d_mode"
        android:title="@string/pref_title_2d_mode" />

    <ListPreference
        android:defaultValue="HIGH"
        android:entries="@array/pref_graphics_quality_titles"
        android:entryValues="@array/pref_graphics_quality_values"
        android:key="@string/pref_key_graphics_quality"
        android:title="@string/pref_title_graphics_quality" />

</PreferenceScreen>
